--- a/views/viewRestaurants.ejs
+++ b/views/viewRestaurants.ejs
@@ -31,7 +31,7 @@
             <p><strong>Ambience:</strong> <%= restaurant.ambience.join(', ') %></p>
             <p><strong>Timings:</strong> <%= restaurant.timings %></p>
             <p><strong>Price:</strong> <%= restaurant.price %></p>
-            <a href="/update-restaurant/<%= restaurant._id %>" class="text-blue-600 hover:underline mt-4 inline-block">View Details</a>
+            <a href="/update-restaurant/<%= restaurant._id %>" class="text-blue-600 hover:underline mt-4 inline-block">Edit</a>
           </div>
         <% }) %>
       </div>
